fix vertical-align of column headers
Bootstrap set `vertical-align: bottom;` on th elements. The results
looks not so good especially for the column header of multiselect
column. I set currently `vertical-align:middle` on the column header of
multiselect column, but one can consider to replace `.ui-jqgrid
.ui-jqgrid-htable .ui-jqgrid-labels > th.jqgh_cbox` to `.ui-jqgrid
.ui-jqgrid-htable .ui-jqgrid-labels > th` and apply it on all column
headers.

--- a/css/ui.jqgrid.css
+++ b/css/ui.jqgrid.css
@@ -1,6 +1,6 @@
 /**
  * jqGrid 4.12.2-pre - free jqGrid: https://github.com/free-jqgrid/jqGrid 
- * Date: 2016-02-08
+ * Date: 2016-02-12
  */
 
 /* Grid */
@@ -194,6 +194,9 @@
 	position: relative;
 	height: auto;
 	margin: 2px 2px;
+}
+.ui-jqgrid .ui-jqgrid-htable .ui-jqgrid-labels > th.jqgh_cbox {
+	vertical-align: middle;
 }
 .ui-jqgrid .ui-jqgrid-htable .ui-jqgrid-labels .jqgh_cbox > div {
 	margin: 0;
